welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:45: error: reassignment to val
        depX=depX+1
            ^